# tinyrenderer

./: CMakeLists.txt  LICENSE  README.md
imgs/: Lec03_zbuffer_diffuse_light.tga  Lec04 pic01.tga  Lec04 pic02.tga  Lec04 pic03.tga
src/: geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  our_gl.cpp  tgaimage.cpp  tgaimage.h
x64/Debug/: TinyRenderer.exe.recipe  TinyRenderer.ilk  TinyRenderer.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/TinyRenderer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TinyRenderer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
